Add location headers, teamItem
